--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "ollama>=0.6.1",
     "pdfplumber>=0.11.9",
+    "python-dotenv>=1.2.1",
+    "supabase>=2.27.3",
 ]
